[package]
name = "binance_bot"
version = "0.1.0"
authors = ["thetrung <thetrung.research@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
configparser = "2.0.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }